backend/characterimage/config/base/service-character-image.yaml
apiVersion: v1
kind: Service
metadata:
  name: character-image
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8888
      name: http-port
    - protocol: TCP
      port: 9999
      name: grpc-port
  selector:
    app: character-image
