backend/characterimage/config/base/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: character-image-db
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      name: psql-port
  selector:
    app: character-image-db
